--- a/src/scss/components/ui-kit/_buttons.scss
+++ b/src/scss/components/ui-kit/_buttons.scss
@@ -36,7 +36,7 @@
 .btn-link {
     @include navItem;
     background: none;
-    font-size: 16px;
+    font-size: $root-font-size;
     transition: color .2s ease-in-out;
 
     &:hover {
