--- a/src/scss/components/utilities/_mixins.scss
+++ b/src/scss/components/utilities/_mixins.scss
@@ -4,8 +4,7 @@
     color: var(--nav-item-color);
     display: inline-block;
     font-weight: normal;
-    min-width: 75px;
-    padding: 13px 20px;
+    padding: 15px 20px;
     text-align: center;
     text-decoration: none;
 
